QtQuick/gen_qsgrendernode.h

class QMatrix4x4;
class QRectF;
class QSGClipNode;
class QSGRenderNode;
typedef QSGRenderNode::RenderState QSGRenderNode__RenderState;
class QSGRenderNode__RenderState;
typedef struct QMatrix4x4 QMatrix4x4;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QSGClipNode QSGClipNode;
typedef struct QSGRenderNode QSGRenderNode;
typedef struct QSGRenderNode__RenderState QSGRenderNode__RenderState;
QSGRenderNode* QSGRenderNode_new();
int QSGRenderNode_changedStates(const QSGRenderNode* self);
void QSGRenderNode_render(QSGRenderNode* self, QSGRenderNode__RenderState* state);
void QSGRenderNode_releaseResources(QSGRenderNode* self);
int QSGRenderNode_flags(const QSGRenderNode* self);
QRectF* QSGRenderNode_rect(const QSGRenderNode* self);
QMatrix4x4* QSGRenderNode_matrix(const QSGRenderNode* self);
QSGClipNode* QSGRenderNode_clipList(const QSGRenderNode* self);
double QSGRenderNode_inheritedOpacity(const QSGRenderNode* self);
bool QSGRenderNode_override_virtual_changedStates(void* self, intptr_t slot);
int QSGRenderNode_virtualbase_changedStates(const void* self);
bool QSGRenderNode_override_virtual_render(void* self, intptr_t slot);
bool QSGRenderNode_override_virtual_releaseResources(void* self, intptr_t slot);
void QSGRenderNode_virtualbase_releaseResources(void* self);
bool QSGRenderNode_override_virtual_flags(void* self, intptr_t slot);
int QSGRenderNode_virtualbase_flags(const void* self);
bool QSGRenderNode_override_virtual_rect(void* self, intptr_t slot);
QRectF* QSGRenderNode_virtualbase_rect(const void* self);
bool QSGRenderNode_override_virtual_isSubtreeBlocked(void* self, intptr_t slot);
bool QSGRenderNode_virtualbase_isSubtreeBlocked(const void* self);
bool QSGRenderNode_override_virtual_preprocess(void* self, intptr_t slot);
void QSGRenderNode_virtualbase_preprocess(void* self);
void QSGRenderNode_delete(QSGRenderNode* self);
QMatrix4x4* QSGRenderNode__RenderState_projectionMatrix(const QSGRenderNode__RenderState* self);
QRect* QSGRenderNode__RenderState_scissorRect(const QSGRenderNode__RenderState* self);
bool QSGRenderNode__RenderState_scissorEnabled(const QSGRenderNode__RenderState* self);
int QSGRenderNode__RenderState_stencilValue(const QSGRenderNode__RenderState* self);
bool QSGRenderNode__RenderState_stencilEnabled(const QSGRenderNode__RenderState* self);
QRegion* QSGRenderNode__RenderState_clipRegion(const QSGRenderNode__RenderState* self);
void* QSGRenderNode__RenderState_get(const QSGRenderNode__RenderState* self, const char* state);
void QSGRenderNode__RenderState_operatorAssign(QSGRenderNode__RenderState* self, QSGRenderNode__RenderState* param1);
void QSGRenderNode__RenderState_delete(QSGRenderNode__RenderState* self);